--- a/waybar/style.css
+++ b/waybar/style.css
@@ -1,18 +1,19 @@
 * {
     border: none;
-    border-radius: 0;
+    border-radius: 2px;
     /* `otf-font-awesome` is required to be installed for icons */
-    font-family: Roboto, Helvetica, Arial, sans-serif;
-    font-size: 13px;
+    font-family: "Roboto Mono Medium", Roboto, Helvetica, Arial, sans-serif;
+    font-size: 15px;
     min-height: 0;
 }
 
 window#waybar {
-    background-color: rgba(43, 48, 59, 0.5);
+    background-color: rgba(43, 48, 59, 0.9);
     border-bottom: 3px solid rgba(100, 114, 125, 0.5);
     color: #ffffff;
     transition-property: background-color;
     transition-duration: .5s;
+    border-radius: 0;
 }
 
 window#waybar.hidden {
@@ -38,7 +39,7 @@ window#waybar.chromium {
 }
 
 #workspaces button {
-    padding: 0 5px;
+    padding: 0 0.4em;
     background-color: transparent;
     color: #ffffff;
     /* Use box-shadow instead of border so the text isn't offset */
@@ -80,8 +81,8 @@ window#waybar.chromium {
 #idle_inhibitor,
 #mpd {
     padding: 0 10px;
-    margin: 0 4px;
-    color: #ffffff;
+    margin: 4px 4px;
+    color: #333333;
 }
 
 #window,
@@ -100,7 +101,7 @@ window#waybar.chromium {
 }
 
 #clock {
-    background-color: #64727D;
+    background-color: #bbccdd;
 }
 
 #battery {
