--- a/waybar/style.css
+++ b/waybar/style.css
@@ -1,178 +1,295 @@
+@import "/home/shaka/.config/waybar/themes/mocha.css";
+
+/* Download icons font: https://github.com/Templarian/MaterialDesign-Font */
 * {
-  border: none;
-  border-radius: 2px;
-  font-family: "Roboto Mono Medium", "Font Awesome 5 Free Solid", Helvetica, Arial, sans-serif;
+  font-family: "Roboto Mono Medium", "Material Design Icons Desktop";
   font-size: 14px;
 }
 
+/* Waybar */
 window#waybar {
-  /* background-color: rgba(18, 21, 29, 0.98); */
-  background-color: #1a1a1a;
-  /* background-color: rgba(0, 0, 0, 0); */
-  border-bottom: 3px solid #1e222a;
-  color: #abb2bf;
+  background-color: @base;
+  color: @text;
   transition-property: background-color;
-  transition-duration: .5s;
+  transition-duration: 0.5s;
 }
 
-window#waybar.hidden {
+/* window#waybar.hidden {
   opacity: 0.2;
+} */
+
+/*
+window#waybar.empty {
+    background-color: transparent;
+}
+window#waybar.solo {
+    background-color: #FFFFFF;
+}
+*/
+
+window#waybar.termite {
+  background-color: #3f3f3f;
 }
 
-#workspaces,
-#mode,
-#custom-media,
-#clock,
-#idle_inhibitor,
-#language,
-#pulseaudio,
+window#waybar.chromium {
+  background-color: #000000;
+  border: none;
+}
+
+/* Modules */
 #backlight,
 #battery,
+#bluetooth,
+#clock,
 #cpu,
+#custom,
+#disk,
+#gamemode
+#hyprland
+#idle_inhibitor,
+#jack,
+#keyboard-statejack,
+#language,
 #memory,
-#network,
-#custom-power,
 #mpd,
-#custom-spotify,
-#tray {
-  background-color: #1e222a;
-  padding: 0 10px;
-  margin: 2px 4px 4px 4px;
-  border: 3px solid rgba(0, 0, 0, 0);
-  border-radius: 90px;
-  background-clip: padding-box;
+#network,
+#pulseaudio,
+#sndio,
+#mode,
+#temperature,
+#tray,
+#taskbar,
+#window {
+  padding: 2px 10px;
+  color: @text;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  margin-left: 2px;
+  margin-right: 2px;
+  border-radius: 20px;
+}
+
+/* Workspaces */
+#workspaces {
+  margin-left: 2px;
+  margin-right: 2px;
 }
 
 #workspaces button {
-  padding: 0 5px;
-  min-width: 20px;
-  color: #61afef;
+  background-color: @surface0;
+  padding: 1px 8px;
+  color: @subtext0;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  margin-left: 2px;
+  margin-right: 2px;
+  border-radius: 20px;
+  transition-duration: 0.2s;
 }
-
-#temperature,
-#disk {
-  padding: 0 10px;
-  margin: 2px 4px 4px 4px;
-}
-
 
 #workspaces button:hover {
-  background-color: rgba(0, 0, 0, 0.2)
+  background-color: @blue;
+  color: @crust;
+  transition-duration: 0.2s;
+}
+
+#workspaces button.active {
+  padding: 1px 12px;
+  background-color: @green;
+  color: @crust;
+  transition-duration: 0.2s;
 }
 
 #workspaces button.focused {
-  color: #c678dd;
-}
-
-#disk {
-  color: #56b6c2;
+  background-color: @lavender;
+  color: @crust;
 }
 
 #workspaces button.urgent {
-  color: #e06c75;
+  background-color: @red;
+  color: @crust;
 }
 
-#cpu {
-  color: #d19a66;
-}
-
-#memory {
-  color: #c678dd;
-}
-
-#temperature {
-  color: #61afef;
-}
-
-#temperature.critical {
-  background-color: #e06c75;
-  color: #1e222a;
-}
-
-#custom-media {
-  background-color: #c678dd;
-  color: #1e222a;
-}
-
-#custom-fans {
-  color: #98c379;
-}
-
-#clock {
-  color: #61afef;
-}
-
-#custom-power {
-  color: #f25287
-}
-
-#idle_inhibitor {
-  color: #abb2bf;
-}
-
-#idle_inhibitor.activated {
-  background-color: #abb2bf;
-  color: #1e222a;
-}
-
-#language {
-  color: #56b6c2;
-}
-
-#pulseaudio {
-  color: #d19a66;
-}
-
-#custom-rofi {
-	color: #ffffff;
-	background-color: #008aff;
-}
-
-#pulseaudio.muted {
-  background-color: #e06c75;
-  color: #1e222a;
-}
-
+/* Backlight */
 #backlight {
-  color: #61afef;
+  background-color: #ffffff;
+  color: @crust;
 }
 
+/* Bluetooth */
+#bluetooth {
+  background-color: @blue;
+  color: @crust;
+}
+
+#bluetooth.disabled {
+  background-color: @lavender;
+}
+
+#bluetooth.off {
+  background-color: @red;
+}
+
+/* Battery */
 #battery {
-  color: #98c379;
+  background-color: @green;
+  color: @crust;
 }
 
-#battery.charging, #battery.plugged {
-  background-color: #98c379;
-  color: #1e222a;
+#battery.charging,
+#battery.plugged {
+  background-color: @teal;
+  color: @crust;
 }
 
 @keyframes blink {
-    to {
-        background-color: #1e222a;
-        color: #e06c75;
-    }
+  to {
+    background-color: #ffffff;
+    color: #000000;
+  }
 }
 
 #battery.critical:not(.charging) {
-    background-color: #e06c75;
-    color: #1e222a;
-    animation-name: blink;
-    animation-duration: 0.5s;
-    animation-timing-function: linear;
-    animation-iteration-count: infinite;
-    animation-direction: alternate;
+  background-color: @red;
+  color: @crust;
+  animation-name: blink;
+  animation-duration: 0.5s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
 }
 
+/* Clock */
+#clock {
+  background-color: @lavender;
+  color: @crust;
+}
+
+/* CPU */
+#cpu {
+  background-color: @sapphire;
+  color: @crust;
+}
+
+/* Disk */
+#disk {
+  background-color: #964b00;
+  color: @crust;
+}
+
+/* Memory */
+#memory {
+  background-color: @green;
+  color: @crust;
+}
+
+/* Network */
 #network {
-    color: #c678dd
+  background-color: @blue;
+  color: @crust;
 }
 
 #network.disconnected {
-    background-color: #e06c75;
-    color: #1e222a;
+  background-color: @red;
+  color: @crust;
 }
 
+/* Pulseaudio */
+#pulseaudio {
+  background-color: @mauve;
+  color: @crust;
+}
+
+#pulseaudio.muted {
+  background-color: @red;
+  color: @crust;
+}
+
+
+/* Temperature */
+#temperature {
+  background-color: #f0932b;
+  color: @crust;
+}
+
+#temperature.critical {
+  background-color: #eb4d4b;
+  color: @crust;
+}
+
+/* Tray */
+#tray {
+  background-color: #2980b9;
+  color: @crust;
+}
+
+#tray > .passive {
+  -gtk-icon-effect: dim;
+}
+
+#tray > .needs-attention {
+  -gtk-icon-effect: highlight;
+  background-color: #eb4d4b;
+}
+
+/* Idle Inhibitor */
+#idle_inhibitor {
+  background-color: #2d3436;
+}
+
+#idle_inhibitor.activated {
+  background-color: #ecf0f1;
+  color: #2d3436;
+}
+
+/* MPD */
+#mpd {
+  background-color: #66cc99;
+  color: @crust;
+}
+
+#mpd.disconnected {
+  background-color: #f53c3c;
+  color: @crust;
+}
+
+#mpd.stopped {
+  background-color: #90b1b1;
+  color: @crust;
+}
+
+#mpd.paused {
+  background-color: #51a37a;
+  color: @crust;
+}
+
+/* Language */
+#language {
+  background: #00b093;
+  color: #740864;
+  padding: 0 5px;
+  margin: 0 5px;
+  min-width: 16px;
+}
+
+/* Keyboard state */
+#keyboard-state {
+  background: #97e1ad;
+  color: #000000;
+  padding: 0 0px;
+  margin: 0 5px;
+  min-width: 16px;
+}
+
+#keyboard-state > label {
+  padding: 0 5px;
+}
+
+#keyboard-state > label.locked {
+  background: rgba(0, 0, 0, 0.2);
+}
 
 #custom-spotify {
     color: #00b33c;
 }
+
