--- a/waybar/style.css
+++ b/waybar/style.css
@@ -2,8 +2,8 @@
 
 /* Download icons font: https://github.com/Templarian/MaterialDesign-Font */
 * {
-  font-family: "Roboto Mono Medium", "Material Design Icons Desktop";
-  font-size: 14px;
+  font-family: "Roboto Mono", "Material Design Icons Desktop";
+  font-size: 16px;
 }
 
 /* Waybar */
