--- a/swaync/style.css
+++ b/swaync/style.css
@@ -1,45 +1,98 @@
 /*
- * vim: ft=less 
+ * vim: ft=less
  */
 
-@define-color border-color rgb(7, 7, 7);
-@define-color bg rgb(26, 26, 26);
-@define-color bg-hover rgb(38, 38, 38);
-@define-color bg-focus rgba(38, 38, 38, 0.6);
+@define-color cc-bg rgba(42, 42, 42, 0.8);
+
+@define-color noti-border-color rgba(255, 255, 255, 0.15);
+@define-color noti-bg rgba(55, 55, 55, 0.8);
+@define-color noti-bg-hover rgba(65, 65, 65, 0.8);
+@define-color noti-bg-focus rgba(68, 68, 68, 0.6);
+@define-color noti-close-bg rgba(255, 255, 255, 0.1);
+@define-color noti-close-bg-hover rgba(255, 255, 255, 0.15);
+
 @define-color bg-selected rgb(0, 128, 255);
 
 .notification-row {
+  transition: all 200ms ease;
   outline: none;
+  margin-bottom: 4px;
+  border-radius: 12px;
 }
-.notification-row:focus,
-.notification-row:hover {
-  background: @bg-focus;
+
+.control-center .notification-row:focus,
+.control-center .notification-row:hover {
+  opacity: 0.2;
+  background: transparent;
+}
+
+.notification-row:focus .notification,
+.notification-row:hover .notification {
+  box-shadow: 0 1px 3px 1px rgba(0, 0, 0, 0.5);
+  box-shadow: 0px 0px 0px 3px @bg-selected;
+}
+
+.control-center .notification {
+  box-shadow: none;
+}
+
+.control-center .notification-row {
+  opacity: 0.3;
 }
 
 .notification {
-  border-radius: 10px;
-  margin: 6px 12px;
-  box-shadow: 0px 2px 4px 2px rgba(0, 0, 0, 0.3);
+  transition: all 200ms ease;
+  border-radius: 12px;
+  margin: 6px 6px;
+  box-shadow: 0 1px 3px 1px rgba(0, 0, 0, 0.5);
   padding: 0;
 }
+
+/* Uncomment to enable specific urgency colors
+.low {
+  background: yellow;
+  padding: 6px;
+  border-radius: 12px;
+}
+
+.normal {
+  background: green;
+  padding: 6px;
+  border-radius: 12px;
+}
+
+.critical {
+  background: red;
+  padding: 6px;
+  border-radius: 12px;
+}
+*/
 
 .notification-content {
   background: transparent;
   padding: 6px;
-  border-radius: 10px;
+  border-radius: 12px;
 }
 
 .close-button {
-  background: black;
+  background: @noti-close-bg;
   color: white;
   text-shadow: none;
-  padding: 0 2px;
-  box-shadow: 0px 2px 4px 2px rgba(0, 0, 0, 0.3);
+  padding: 0;
   border-radius: 100%;
+  margin-top: 10px;
+  margin-right: 10px;
+  box-shadow: none;
+  border: none;
+  min-width: 24px;
+  min-height: 24px;
 }
+
 .close-button:hover {
-  background: rgb(30, 30, 30);
+  box-shadow: none;
+  background: @noti-close-bg-hover;
   transition: all 0.15s ease-in-out;
+  border: none;
 }
 
 .notification-default-action,
@@ -47,17 +100,19 @@
   padding: 4px;
   margin: 0;
   box-shadow: none;
-  background: @bg;
-  border: 1px solid @border-color;
+  background: @noti-bg;
+  border: 1px solid @noti-border-color;
+  color: white;
 }
 
 .notification-default-action:hover,
 .notification-action:hover {
-  background: @bg-hover;
+  -gtk-icon-effect: none;
+  background: @noti-bg-hover;
 }
 
 .notification-default-action {
-  border-radius: 10px;
+  border-radius: 12px;
 }
 
 /* When alternative actions are visible */
@@ -76,9 +131,10 @@
 .notification-action:first-child {
   border-bottom-left-radius: 10px;
 }
+
 .notification-action:last-child {
   border-bottom-right-radius: 10px;
-  border-right: 1px solid @border-color;
+  border-right: 1px solid @noti-border-color;
 }
 
 .image {
@@ -87,25 +143,35 @@
 .body-image {
   margin-top: 6px;
   background-color: white;
-  border-radius: 10px;
+  border-radius: 12px;
 }
 
 .summary {
-  color: white;
-  text-shadow: none;
-}
-
-.time {
-  color: white;
-  text-shadow: none;
-}
-
-.body {
+  font-size: 16px;
+  font-weight: bold;
   background: transparent;
   color: white;
   text-shadow: none;
 }
 
+.time {
+  font-size: 16px;
+  font-weight: bold;
+  background: transparent;
+  color: white;
+  text-shadow: none;
+  margin-right: 18px;
+}
+
+.body {
+  font-size: 15px;
+  font-weight: normal;
+  background: transparent;
+  color: white;
+  text-shadow: none;
+}
+
+/* The "Notifications" and "Do Not Disturb" text widget */
 .top-action-title {
   color: white;
   text-shadow: none;
@@ -114,32 +180,41 @@
 .control-center-clear-all {
   color: white;
   text-shadow: none;
-  background: @bg;
-  border: 1px solid @border-color;
+  background: @noti-bg;
+  border: 1px solid @noti-border-color;
   box-shadow: none;
-  border-radius: 10px;
+  border-radius: 12px;
 }
+
 .control-center-clear-all:hover {
-  background: @bg-hover;
+  background: @noti-bg-hover;
 }
 
 .control-center-dnd {
-  border-radius: 10px;
-  background: @bg;
-  border: 1px solid @border-color;
+  border-radius: 12px;
+  background: @noti-bg;
+  border: 1px solid @noti-border-color;
   box-shadow: none;
 }
 
 .control-center-dnd:checked {
   background: @bg-selected;
 }
+
 .control-center-dnd slider {
-  background: @bg-hover;
+  background: @noti-bg-hover;
+  border-radius: 12px;
 }
 
 .control-center {
-  background: rgba(0, 0, 0, 0.7);
+  background: @cc-bg;
+  border-radius: 12px;
+  background-clip: border-box;
+  padding: 4px;
+  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.3), 0 1px 3px 1px rgba(0, 0, 0, 0.7),
+    0 2px 6px 2px rgba(0, 0, 0, 0.3);
 }
+
 .control-center-list {
   background: transparent;
 }
@@ -147,3 +222,75 @@
 .floating-notifications {
   background: transparent;
 }
+
+/* Window behind control center and on all other monitors */
+.blank-window {
+  background: transparent;
+}
+
+/*** Widgets ***/
+
+/* Title widget */
+.widget-title {
+  margin: 8px;
+  font-size: 1.5rem;
+}
+.widget-title > button {
+  font-size: initial;
+  color: white;
+  text-shadow: none;
+  background: @noti-bg;
+  border: 1px solid @noti-border-color;
+  box-shadow: none;
+  border-radius: 12px;
+}
+.widget-title > button:hover {
+  background: @noti-bg-hover;
+}
+
+/* DND widget */
+.widget-dnd {
+  margin: 8px;
+  font-size: 1.1rem;
+}
+.widget-dnd > switch {
+  font-size: initial;
+  border-radius: 12px;
+  background: @noti-bg;
+  border: 1px solid @noti-border-color;
+  box-shadow: none;
+}
+.widget-dnd > switch:checked {
+  background: @bg-selected;
+}
+.widget-dnd > switch slider {
+  background: @noti-bg-hover;
+  border-radius: 12px;
+}
+
+/* Label widget */
+.widget-label {
+  margin: 8px;
+}
+.widget-label > label {
+  font-size: 1.1rem;
+}
+
+/* Mpris widget */
+.widget-mpris {
+  /* The parent to all players */
+}
+.widget-mpris-player {
+  padding: 8px;
+  margin: 8px;
+  background-color: @noti-bg;
+  border-radius: 12px;
+}
+.widget-mpris-title {
+  font-weight: bold;
+  font-size: 1.25rem;
+}
+.widget-mpris-subtitle {
+  font-size: 1.1rem;
+}
+
