--- a/waybar/style.css
+++ b/waybar/style.css
@@ -1,297 +1,91 @@
-@import "/home/shaka/.config/waybar/themes/mocha.css";
-
-/* Download icons font: https://github.com/Templarian/MaterialDesign-Font */
 * {
-  font-family: "Roboto Mono", "Material Design Icons Desktop";
-  font-weight: 500;
-  font-size: 16px;
-
+    border-radius: 0;
+    font-family: 'OperatorMono Nerd Font';
+    font-size: 14pt;
+    min-height: 0;
 }
 
-/* Waybar */
 window#waybar {
-  background-color: @base;
-  color: @text;
-  transition-property: background-color;
-  transition-duration: 0.5s;
+    background: #1E1E28;
+    color: #DADAE8;
 }
 
-/* window#waybar.hidden {
-  opacity: 0.2;
-} */
+tooltip {
+	background: #1E1E28;
+	border-radius: 15px;
+	border-width: 2px;
+	border-style: solid;
+	border-color: #a4b9ef;
+	}
 
-/*
-window#waybar.empty {
-    background-color: transparent;
-}
-window#waybar.solo {
-    background-color: #FFFFFF;
-}
-*/
-
-window#waybar.termite {
-  background-color: #3f3f3f;
-}
-
-window#waybar.chromium {
-  background-color: #000000;
-  border: none;
-}
-
-/* Modules */
-#backlight,
-#battery,
-#bluetooth,
-#clock,
-#cpu,
-#custom,
-#disk,
-#gamemode
-#hyprland
-#idle_inhibitor,
-#jack,
-#keyboard-statejack,
-#language,
-#memory,
-#mpd,
-#network,
-#pulseaudio,
-#sndio,
-#mode,
-#temperature,
-#tray,
-#taskbar,
-#window {
-  padding: 2px 10px;
-  color: @text;
-  margin-top: 5px;
-  margin-bottom: 5px;
-  margin-left: 2px;
-  margin-right: 2px;
-  border-radius: 20px;
-}
-
-/* Workspaces */
 #workspaces {
-  margin-left: 2px;
-  margin-right: 2px;
+    background: #332E41;
+    margin-left: 5px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    border-radius: 15px;
 }
 
 #workspaces button {
-  background-color: @surface0;
-  padding: 1px 8px;
-  color: @subtext0;
-  margin-top: 5px;
-  margin-bottom: 5px;
-  margin-left: 2px;
-  margin-right: 2px;
-  border-radius: 20px;
-  transition-duration: 0.2s;
-}
-
-#workspaces button:hover {
-  background-color: @blue;
-  color: @crust;
-  transition-duration: 0.2s;
-}
-
-#workspaces button.active {
-  padding: 1px 12px;
-  background-color: @green;
-  color: @crust;
-  transition-duration: 0.2s;
+    padding-left: 10px;
+    padding-right: 10px;
+    min-width: 0;
+    color: #DADAE8;
 }
 
 #workspaces button.focused {
-  background-color: @lavender;
-  color: @crust;
+    color: #A4B9EF;
 }
 
 #workspaces button.urgent {
-  background-color: @red;
-  color: @crust;
+    color: #F9C096;
 }
 
-/* Backlight */
-#backlight {
-  background-color: #ffffff;
-  color: @crust;
+#workspaces button:hover {
+    background: #332e41;
+    border-color: #332e41;
+	color: #A4B9EF;
 }
 
-/* Bluetooth */
-#bluetooth {
-  background-color: @blue;
-  color: @crust;
+#clock, #battery, #pulseaudio, #workspaces, #backlight{
+	padding: 2px 10px;
+    background: #332E41;
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
 
-#bluetooth.disabled {
-  background-color: @lavender;
-}
-
-#bluetooth.off {
-  background-color: @red;
-}
-
-/* Battery */
-#battery {
-  background-color: @green;
-  color: @crust;
-}
-
-#battery.charging,
-#battery.plugged {
-  background-color: @teal;
-  color: @crust;
-}
-
-@keyframes blink {
-  to {
-    background-color: #ffffff;
-    color: #000000;
-  }
-}
-
-#battery.critical:not(.charging) {
-  background-color: @red;
-  color: @crust;
-  animation-name: blink;
-  animation-duration: 0.5s;
-  animation-timing-function: linear;
-  animation-iteration-count: infinite;
-  animation-direction: alternate;
-}
-
-/* Clock */
-#clock {
-  background-color: @lavender;
-  color: @crust;
-}
-
-/* CPU */
-#cpu {
-  background-color: @sapphire;
-  color: @crust;
-}
-
-/* Disk */
-#disk {
-  background-color: #964b00;
-  color: @crust;
-}
-
-/* Memory */
-#memory {
-  background-color: @green;
-  color: @crust;
-}
-
-/* Network */
 #network {
-  background-color: @blue;
-  color: @crust;
+    padding-left: 15px;
+    padding-right: 2px;
+    background: #332E41;
+    border-radius: 15px 0px 0px 15px;
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
 
-#network.disconnected {
-  background-color: @red;
-  color: @crust;
+#clock {
+    padding-right: 15px;
+    margin-right: 5px;
+    border-radius: 0px 15px 15px 0px;
 }
 
-/* Pulseaudio */
-#pulseaudio {
-  background-color: @mauve;
-  color: @crust;
-}
-
-#pulseaudio.muted {
-  background-color: @red;
-  color: @crust;
-}
-
-
-/* Temperature */
-#temperature {
-  background-color: #f0932b;
-  color: @crust;
-}
-
-#temperature.critical {
-  background-color: #eb4d4b;
-  color: @crust;
-}
-
-/* Tray */
 #tray {
-  background-color: #2980b9;
-  color: @crust;
+    padding-right: 15px;
+    margin-right: 5px;
+    border-radius: 15px 15px 15px 15px;
+    padding-left: 15px;
+    background: #332E41;
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
 
-#tray > .passive {
-  -gtk-icon-effect: dim;
-}
-
-#tray > .needs-attention {
-  -gtk-icon-effect: highlight;
-  background-color: #eb4d4b;
-}
-
-/* Idle Inhibitor */
-#idle_inhibitor {
-  background-color: #2d3436;
-}
-
-#idle_inhibitor.activated {
-  background-color: #ecf0f1;
-  color: #2d3436;
-}
-
-/* MPD */
-#mpd {
-  background-color: #66cc99;
-  color: @crust;
-}
-
-#mpd.disconnected {
-  background-color: #f53c3c;
-  color: @crust;
-}
-
-#mpd.stopped {
-  background-color: #90b1b1;
-  color: @crust;
-}
-
-#mpd.paused {
-  background-color: #51a37a;
-  color: @crust;
-}
-
-/* Language */
-#language {
-  background: #00b093;
-  color: #740864;
-  padding: 0 5px;
-  margin: 0 5px;
-  min-width: 16px;
-}
-
-/* Keyboard state */
-#keyboard-state {
-  background: #97e1ad;
-  color: #000000;
-  padding: 0 0px;
-  margin: 0 5px;
-  min-width: 16px;
-}
-
-#keyboard-state > label {
-  padding: 0 5px;
-}
-
-#keyboard-state > label.locked {
-  background: rgba(0, 0, 0, 0.2);
-}
 
 #custom-spotify {
-    color: #00b33c;
+    background: #332E41;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    margin-left: 5px;
+    padding-right: 15px;
+    padding-left: 15px;
+    border-radius: 15px;
 }
-
