add vanilla config?

--- a/swaync/style.css
+++ b/swaync/style.css
@@ -2,49 +2,35 @@
  * vim: ft=less
  */
 
-@define-color cc-bg rgba(42, 42, 42, 0.8);
+@define-color cc-bg rgba(0, 0, 0, 0.7);
 
 @define-color noti-border-color rgba(255, 255, 255, 0.15);
-@define-color noti-bg rgba(55, 55, 55, 0.8);
-@define-color noti-bg-hover rgba(65, 65, 65, 0.8);
+@define-color noti-bg rgb(48, 48, 48);
+@define-color noti-bg-darker rgb(38, 38, 38);
+@define-color noti-bg-hover rgb(56, 56, 56);
 @define-color noti-bg-focus rgba(68, 68, 68, 0.6);
 @define-color noti-close-bg rgba(255, 255, 255, 0.1);
 @define-color noti-close-bg-hover rgba(255, 255, 255, 0.15);
 
+@define-color text-color rgb(255, 255, 255);
+@define-color text-color-disabled rgb(150, 150, 150);
+
 @define-color bg-selected rgb(0, 128, 255);
 
 .notification-row {
-  transition: all 200ms ease;
   outline: none;
-  margin-bottom: 4px;
-  border-radius: 12px;
 }
 
-.control-center .notification-row:focus,
-.control-center .notification-row:hover {
-  opacity: 0.2;
-  background: transparent;
-}
-
-.notification-row:focus .notification,
-.notification-row:hover .notification {
-  box-shadow: 0 1px 3px 1px rgba(0, 0, 0, 0.5);
-  box-shadow: 0px 0px 0px 3px @bg-selected;
-}
-
-.control-center .notification {
-  box-shadow: none;
-}
-
-.control-center .notification-row {
-  opacity: 0.3;
+.notification-row:focus,
+.notification-row:hover {
+  background: @noti-bg-focus;
 }
 
 .notification {
-  transition: all 200ms ease;
   border-radius: 12px;
-  margin: 6px 6px;
-  box-shadow: 0 1px 3px 1px rgba(0, 0, 0, 0.5);
+  margin: 6px 12px;
+  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.3), 0 1px 3px 1px rgba(0, 0, 0, 0.7),
+    0 2px 6px 2px rgba(0, 0, 0, 0.3);
   padding: 0;
 }
 
@@ -76,12 +62,12 @@
 
 .close-button {
   background: @noti-close-bg;
-  color: white;
+  color: @text-color;
   text-shadow: none;
   padding: 0;
   border-radius: 100%;
   margin-top: 10px;
-  margin-right: 10px;
+  margin-right: 16px;
   box-shadow: none;
   border: none;
   min-width: 24px;
@@ -102,7 +88,8 @@
   box-shadow: none;
   background: @noti-bg;
   border: 1px solid @noti-border-color;
-  color: white;
+  color: @text-color;
+  transition: all 0.15s ease-in-out;
 }
 
 .notification-default-action:hover,
@@ -137,6 +124,32 @@
   border-right: 1px solid @noti-border-color;
 }
 
+.inline-reply {
+  margin-top: 8px;
+}
+.inline-reply-entry {
+  background: @noti-bg-darker;
+  color: @text-color;
+  caret-color: @text-color;
+  border: 1px solid @noti-border-color;
+  border-radius: 12px;
+}
+.inline-reply-button {
+  margin-left: 4px;
+  background: @noti-bg;
+  border: 1px solid @noti-border-color;
+  border-radius: 12px;
+  color: @text-color;
+}
+.inline-reply-button:disabled {
+  background: initial;
+  color: @text-color-disabled;
+  border: 1px solid transparent;
+}
+.inline-reply-button:hover {
+  background: @noti-bg-hover;
+}
+
 .image {
 }
 
@@ -150,7 +163,7 @@
   font-size: 16px;
   font-weight: bold;
   background: transparent;
-  color: white;
+  color: @text-color;
   text-shadow: none;
 }
 
@@ -158,7 +171,7 @@
   font-size: 16px;
   font-weight: bold;
   background: transparent;
-  color: white;
+  color: @text-color;
   text-shadow: none;
   margin-right: 18px;
 }
@@ -167,56 +180,20 @@
   font-size: 15px;
   font-weight: normal;
   background: transparent;
-  color: white;
+  color: @text-color;
   text-shadow: none;
-}
-
-/* The "Notifications" and "Do Not Disturb" text widget */
-.top-action-title {
-  color: white;
-  text-shadow: none;
-}
-
-.control-center-clear-all {
-  color: white;
-  text-shadow: none;
-  background: @noti-bg;
-  border: 1px solid @noti-border-color;
-  box-shadow: none;
-  border-radius: 12px;
-}
-
-.control-center-clear-all:hover {
-  background: @noti-bg-hover;
-}
-
-.control-center-dnd {
-  border-radius: 12px;
-  background: @noti-bg;
-  border: 1px solid @noti-border-color;
-  box-shadow: none;
-}
-
-.control-center-dnd:checked {
-  background: @bg-selected;
-}
-
-.control-center-dnd slider {
-  background: @noti-bg-hover;
-  border-radius: 12px;
 }
 
 .control-center {
   background: @cc-bg;
-  border-radius: 12px;
-  background-clip: border-box;
-  padding: 4px;
-  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.3), 0 1px 3px 1px rgba(0, 0, 0, 0.7),
-    0 2px 6px 2px rgba(0, 0, 0, 0.3);
 }
 
 .control-center-list {
   background: transparent;
+}
+
+.control-center-list-placeholder {
+  opacity: 0.5;
 }
 
 .floating-notifications {
@@ -225,7 +202,7 @@
 
 /* Window behind control center and on all other monitors */
 .blank-window {
-  background: transparent;
+  background: alpha(black, 0.25);
 }
 
 /*** Widgets ***/
@@ -237,7 +214,7 @@
 }
 .widget-title > button {
   font-size: initial;
-  color: white;
+  color: @text-color;
   text-shadow: none;
   background: @noti-bg;
   border: 1px solid @noti-border-color;
@@ -283,8 +260,6 @@
 .widget-mpris-player {
   padding: 8px;
   margin: 8px;
-  background-color: @noti-bg;
-  border-radius: 12px;
 }
 .widget-mpris-title {
   font-weight: bold;
@@ -294,3 +269,93 @@
   font-size: 1.1rem;
 }
 
+/* Buttons widget */
+.widget-buttons-grid {
+  padding: 8px;
+  margin: 8px;
+  border-radius: 12px;
+  background-color: @noti-bg;
+}
+
+.widget-buttons-grid>flowbox>flowboxchild>button{
+  background: @noti-bg;
+  border-radius: 12px;
+}
+
+.widget-buttons-grid>flowbox>flowboxchild>button:hover {
+  background: @noti-bg-hover;
+}
+
+/* Menubar widget */
+.widget-menubar>box>.menu-button-bar>button {
+  border: none;
+  background: transparent;
+}
+
+/* .AnyName { Name defined in config after #
+  background-color: @noti-bg;
+  padding: 8px;
+  margin: 8px;
+  border-radius: 12px;
+}
+
+.AnyName>button {
+  background: transparent;
+  border: none;
+}
+
+.AnyName>button:hover {
+  background-color: @noti-bg-hover;
+} */
+
+.topbar-buttons>button { /* Name defined in config after # */
+  border: none;
+  background: transparent;
+}
+
+/* Volume widget */
+
+.widget-volume {
+  background-color: @noti-bg;
+  padding: 8px;
+  margin: 8px;
+  border-radius: 12px;
+}
+
+.widget-volume>box>button {
+  background: transparent;
+  border: none;
+}
+
+.per-app-volume {
+  background-color: @noti-bg-alt;
+  padding: 4px 8px 8px 8px;
+  margin: 0px 8px 8px 8px;
+  border-radius: 12px
+}
+
+/* Backlight widget */
+.widget-backlight {
+  background-color: @noti-bg;
+  padding: 8px;
+  margin: 8px;
+  border-radius: 12px;
+}
+
+/* Title widget */
+.widget-inhibitors {
+  margin: 8px;
+  font-size: 1.5rem;
+}
+.widget-inhibitors > button {
+  font-size: initial;
+  color: @text-color;
+  text-shadow: none;
+  background: @noti-bg;
+  border: 1px solid @noti-border-color;
+  box-shadow: none;
+  border-radius: 12px;
+}
+.widget-inhibitors > button:hover {
+  background: @noti-bg-hover;
+}
